--- a/blogpost.html
+++ b/blogpost.html
@@ -28,6 +28,9 @@
 
         <p>Suscribete y dale like</p>
       </div>
+      <div id="footer">
+        Hecho con amor el Platzi &lt;3
+      </div>
     </div>
   </body>
 </html>
