--- a/blogpost.html
+++ b/blogpost.html
@@ -20,7 +20,7 @@
           y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas
           incre&iacute;bles que se pueden hacer con ramas
         </p>
-        <p> <img src="imagenes/equipo.jpg" width="100%"></p>
+        <p> <img src="https://static.platzi.com/media/user_upload/200115_hackaton_premiaci%C3%B3n_065-af9e71ee-b6c9-4946-8006-c04e9b3a68b9.jpg" width="100%"></p>
         <p>
           Los blogs son la mejor forma de compartir informacion y tus ideas.
           Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un
